--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>João Inácio - DoWhile 2021</title>
+  <title>Wesley Guerra - DoWhile 2021</title>
 
   <link rel="stylesheet" href="style.css" />
 
