--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
 
 <body>
   <span>
-    <img src="images/faixa.svg" alt="Faixa Rocketseat" 
-    >
+    <img src="images/faixa.svg" alt="Faixa Rocketseat">
   </span>
   <span>
     <img src="images/quebra.svg" alt="Faixa Rocketseat">
@@ -33,8 +32,7 @@
             style="transition-duration: 300ms; transform: translate3d(0px, 0px, 0px);">
             <div class="avatar">
               <span>
-                <img src="images/selo.svg" alt="Selo Rocketseat" data-atropos-offset="2"
-                >
+                <img src="images/selo.svg" alt="Selo Rocketseat" data-atropos-offset="2">
               </span>
 
               <img src="https://github.com/wesleygmssa.png" alt="Foto pessoal">
@@ -48,11 +46,7 @@
             <p>Front-end Developer</p>
 
             <ul id="socialLinks">
-              <!-- <li class="youtube">
-                <a href="https://youtube.com/birobirobiro" target="_blank">
-                  <img src="images/youtube.svg" alt="Ícone Youtube" />
-                </a>
-              </li> -->
+
               <li class="facebook">
                 <a href="https://www.facebook.com/wesley.guerra.1/" target="_blank">
                   <img src="images/facebook.svg" alt="Ícone Facebook">
