--- a/index.html
+++ b/index.html
@@ -84,11 +84,10 @@
   <script>
     const LinksSocialMedia = {
 
-      github: "birobirobiro",
-      youtube: "birobirobiro",
-      facebook: "birobirobiro",
-      instagram: "birobirobiro",
-      twitter: "birobirobiro"
+      github: "Wesleygmssa",
+      facebook: "wesley.guerra.1",
+      instagram: "wguerra9",
+      twitter: "guerra_ssa"
     }
 
     function changeSocialMediaLinks() {
@@ -97,7 +96,7 @@
       for (let li of socialLinks.children) {
         const social = li.getAttribute('class');
 
-        li.children[0].href = `https://${social}.com/${LinksSocialMedia[social]}`
+        li.children[0].href = `https://${social}.com/${LinksSocialMedia[social]}` //passando dianicamente
 
         // alert(li.children[0].href)
       }
